# sample-aws-genai-ops-demos

./: .gitignore  .semgrepignore  README.md  package.json
cost-optimization/aws-genai-cost-optimization-mcp-server/: README.md  pyproject.toml
cost-optimization/aws-genai-cost-optimization-mcp-server/doc/: ARCHITECTURE.md  CACHING_CROSS_REGION_ANTIPATTERN.md  DESIGN_PRINCIPLES.md  DOCUMENTATION_MAP.md  GENERIC_MODEL_DETECTION.md  MCP_FEATURES.md  NOVA_PROMPT_CACHING_STRATEGY.md  VSC_DETECTOR.md  VSC_PROMPT_DETECTION.md  agentcore-runtime.md  bedrock-detector.md  cross-cutting-patterns.md  prompt-engineering.md
cost-optimization/aws-genai-cost-optimization-mcp-server/examples/: README.md  sample_agentcore_cdk.ts  sample_agentcore_code.py  sample_agentcore_lifecycle.py  sample_bedrock_code.py  sample_cross_cutting.py  sample_false_positives.py  sample_false_positives.tsx  sample_nova_optimization.py  sample_prompt_routing.py  sample_service_tier.py
cost-optimization/aws-genai-cost-optimization-mcp-server/power/: POWER.md  mcp.json
cost-optimization/aws-genai-cost-optimization-mcp-server/tests/: __init__.py  nova_test.py  test_agentcore_detector.py  test_bedrock_detector.py  test_comprehensive_static_detection.py  test_cross_cutting.py  test_cross_region_caching.py  test_detector_directly.py  test_eol_tracker_integration.py  test_false_positive_detection.py  test_fp_mitigation_comparison.py  test_generic_model_detection.py  test_lifecycle_detection.py  test_nova_detection.py  test_nova_eoltracker.py  test_nova_simple.py  test_project.py  test_prompt_optimization.py  (+8 more)
(+913 files in other folders)
