[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cost-optim-genai"
version = "0.1.0"
description = "MCP server for AWS GenAI cost optimization insights"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT-0" }
authors = [
    { name = "AWS", email = "aws-samples@amazon.com" }
]
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "pydantic>=2.11.0,<2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-cost-optim-genai = "mcp_cost_optim_genai.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cost_optim_genai"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
